add comment delete  write more tests

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,4 @@
 action.created=created
 action.commented=commented
 action.change_comment=changed a comment
+action.delete_comment=action.delete_comment\=deleted a comment
