--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -1,3 +1,4 @@
 action.created=erstellte
 action.commented=kommentierte
-action.change_comment=\u00E4nderte den Kommentar zum Vorgang
+action.change_comment=\u00C4nderte einen Kommentar zum Vorgang
+action.delete_comment=L\u00F6schte einen Kommentar zum Vorgang
