--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,3 +1,4 @@
 action.created=created
 action.commented=commented
 action.change_comment=changed a comment for issue
+action.delete_comment=action.delete_comment\=deleted a comment
