--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,4 +1,5 @@
 action.created=created
 action.commented=commented
 action.change_comment=changed a comment for issue
-action.delete_comment=action.delete_comment\=deleted a comment
+action.delete_comment=deleted a comment for issue
+action.add_attachment=uploaded an attachment for issue
