--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -2,3 +2,4 @@ action.created=erstellte
 action.commented=kommentierte
 action.change_comment=\u00C4nderte einen Kommentar zum Vorgang
 action.delete_comment=L\u00F6schte einen Kommentar zum Vorgang
+action.add_attachment=Lud eine Datei hoch zum Vorgang
