--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -3,3 +3,4 @@ action.commented=commented
 action.change_comment=changed a comment for issue
 action.delete_comment=deleted a comment for issue
 action.add_attachment=uploaded an attachment for issue
+action.delete_attachment=deleted an attachment for issue
